--- a/travel.html
+++ b/travel.html
@@ -54,45 +54,35 @@
   
 </div>
 
-<div class="w3-row-padding">
+<div class="row-content">
 
-<div class="w3-third">
+<div class="col-12 col-md-4">
   <h2>London</h2>
   <p>London is the capital city of England.</p>
   <p>It is the most populous city in the United Kingdom,
   with a metropolitan area of over 13 million inhabitants.</p>
+  <img class="image" src="./images/London.jpg" alt="picture of London"/>
 </div>
 
-<div class="w3-third">
+<div class="col-12 col-md-4">
   <h2>Paris</h2>
   <p>Paris is the capital of France.</p> 
   <p>The Paris area is one of the largest population centers in Europe,
   with more than 12 million inhabitants.</p>
+  <img class="image" src="./images/img_1.jpg" alt="picture of Paris"/>
 </div>
 
-<div class="w3-third">
+<div class="col-12 col-md-4">
   <h2>Tokyo</h2>
   <p>Tokyo is the capital of Japan.</p>
   <p>It is the center of the Greater Tokyo Area,
   and the most populous metropolitan area in the world.</p>
+  <img class="image" src="./images/tokyo-bay.jpg" alt="picture of Tokyo"/>
 </div>
 
 </div>
-      <p>&nbsp;</p>
-	  <table>
-	  <tr>
-	  <td>
-      <img class="image" src="./images/London.jpg" alt="picture of London"/>
-	  </td>
-	  
-	  <td>
-      <img class="image" src="./images/img_1.jpg" alt="picture of Paris"/>
-	  </td>
-	  <td>
-      <img class="image" src="./images/tokyo-bay.jpg" alt="picture of Tokyo"/>
-	  </td>
    
-	  </tr> </table>
+     
 	  <br/>
       <button><h4 id="title" onclick="contactMe()">Contact me</h4></button>
      
@@ -107,6 +97,5 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
   </body>
 </html>
